--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3484,7 +3484,7 @@ button {
 
 .right-main-new .iteam-main-new-right img {
   width: 100%;
-  height: 100%;
+  height: 135px;
 }
 
 .right-main-new .iteam-main-new-right .link-new-right {
