--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -151,3 +151,30 @@ margin: 0;
 	font-size: 15px !important;
 	margin-left: 10px;
 }
+.pagination{
+	width: 100%;
+    float: left;
+    height: 40px;
+    text-align: right;
+    margin-top: 10px;
+}
+#pagination{
+	width: 100%;
+	height: 100%;
+}
+#pagination a{
+	border: 1px solid #ccc;
+    width: 100%;
+    height: 100%;
+    padding: 0px 10px;
+    margin-left: 10px;
+    text-decoration: none;
+}
+#pagination strong{
+	border: 1px solid #ccc;
+    width: 100%;
+    height: 100%;
+    padding: 0px 10px;
+    margin-left: 10px;
+    text-decoration: none;
+}
