--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3388,13 +3388,14 @@ button {
 }
 
 .product-info .product-info-bot .detail-pro {
-  width: 50%;
+  width: 100%;
   height: 100%;
   float: left;
   background: #f00;
 }
 
 .product-info .product-info-bot .comparison-pro {
+  display: none;
   width: 50%;
   height: 100%;
   float: left;
@@ -4195,3 +4196,15 @@ button {
     float: left;
     color: #f00;
   }
+  .detail_add{
+    float: left;
+    background: #f00;
+    text-align: center;
+    width: 185px;
+    height: 55px;
+    line-height: 55px;
+    color: #fff;
+    }
+    .detail_add a{
+      text-decoration: none;
+    }
